--- a/ModList/ModList.csproj
+++ b/ModList/ModList.csproj
@@ -14,19 +14,31 @@
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" />
-    <PackageReference Include="MMHOOK.RoR2" Version="2024.12.10" />
+    <PackageReference Include="MMHOOK.RoR2" Version="2024.12.10">
+      <NoWarn>NU1701</NoWarn>
+    </PackageReference>
     <PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.6-r.0" />
     <PackageReference Include="UnityEngine.Modules" Version="2021.3.33" IncludeAssets="compile" />
   </ItemGroup>
-  
+
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
 
+  <!-- This section just bundles a thunderstore package in /dist-->
+  <Target Name="Package" AfterTargets="Build">
+    <ItemGroup>
+      <Resources Include="res\*.*" />
+      <Dist Include="dist" />
+      <Assembly Include="dist\assembly" />
+      <DeployFiles Include="dist\assembly\*.*" />
+    </ItemGroup>
 
-  <Target Name="Dist" AfterTargets="Build">
-    <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="dist" />
-    <Copy SourceFiles="manifest.json" DestinationFolder="dist" />
-    <ZipDirectory Overwrite="True" SourceDirectory="dist" DestinationFile="$(ProjectName).zip" />
+    <Copy SourceFiles="..\README.md" DestinationFolder="@(Assembly)" />
+    <Copy SourceFiles="@(Resources)" DestinationFolder="@(Assembly)" />
+    <Copy SourceFiles="$(OutputPath)com.riskofresources.ModList.dll" DestinationFiles="$(OutputPath)ModList.dll" />
+    <Copy SourceFiles="$(OutputPath)ModList.dll" DestinationFolder="@(Assembly)" />
+    <ZipDirectory Overwrite="True" SourceDirectory="@(Assembly)" DestinationFile="dist\$(ProjectName).zip" />
   </Target>
+
 </Project>
